# lab

LC/: .gitignore  pyproject.toml
agent/: cli.py  config.py  env.example  main.py  requirements.txt
agent/llm/: __init__.py  client.py
bash/: 01_hello.sh  02_variables.sh  03_input.sh  04_conditionals.sh  05_loops.sh  06_functions.sh  07_arrays.sh  quick_reference.sh
c-c/: main.py
c-c/client/: llm_client.py  response.py
dummy-app/: .dockerignore  Dockerfile  README.md  index.js  package.json
fast-api/: .gitignore  Makefile  book.py  main.py  pyproject.toml  requirements.txt
fast-api/alembic/: env.py
fast-api/alembic/versions/: 590397c2b38b_initial_schema.py  c5bad2a6c9e3_add_auth_table.py
fast-api/src/: .gitignore
fast-api/src/auth/: dependencies.py  models.py  routes.py  schemas.py  services.py
fast-api/src/clusters/: data.py  db.py  models.py  (+3 more)
fast-api/todo/: Dockerfile  db.py  main.py  models.py
k8s/: Interview_Questions.md  Notes.md
k8s/Fundamentals/: notes.txt
k8s/replicaset/: replicaset.yaml
mcp-servers/pinpoint-mcp/: .gitignore  PROPOSAL.md  README.md  pyproject.toml
mcp-servers/pinpoint-mcp/src/: server.py
mcp-servers/pinpoint-mcp/src/schema/: models.py
mcp-servers/pinpoint-mcp/src/tools/scanner/: scanner.py
mcp-servers/pinpoint-mcp/src/tools/team_lead/: team_lead.py
mcp-servers/test-mcp/: package.json  playwright.config.ts
python /: Python_OOP_Interview_Questions.md
python/core/: 01_basics.py  02_control_flow.py  03_data_structures.py  04_functions.py  05_decorators.py  06_generators.py  07_oop.py  08_error_handling.py
(+18 files in other folders)
